--- a/public/css/modals.css
+++ b/public/css/modals.css
@@ -9,10 +9,10 @@
 	display: none;
 	color: #333;
 	background-color: #fff;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: 110%;
 	height: 100%;
 	padding: 0 10px;	
 	z-index: 2;
@@ -297,12 +297,12 @@ select:disabled {
 	.modal__wrapper {
 		position: absolute;
 		top: 0;
-		left: 0;	
+		left: 0;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		width: 100%;
-		height: 100%;		
+		height: 100%;
 	}
 
 
